--- a/templates/profile.html
+++ b/templates/profile.html
@@ -224,7 +224,8 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title"><i class="fas fa-camera"></i> 更新头像</h5>
-                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" style="background-color: var(--github-accent);"></button>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                    style="background-color: var(--github-accent);"></button>
             </div>
             <div class="modal-body">
                 <div class="row">
