--- a/templates/admin/projects.html
+++ b/templates/admin/projects.html
@@ -179,7 +179,8 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title"><i class="fas fa-plus"></i> 添加新项目</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" 
+                    style="background-color: var(--github-accent);"></button>
             </div>
             <form id="addProjectForm">
                 <div class="modal-body">
